# agsuperbrain

./: .gitignore  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
agsuperbrain/: __init__.py  __main__.py  cli.py  terminal.py
agsuperbrain/analytics/: report.py
agsuperbrain/core/: config.py  index_pipeline.py  pipeline.py  watcher.py
agsuperbrain/extraction/: audio_extractor.py  doc_extractor.py  import_resolver.py  models.py  project_index.py  rule_engine.py
agsuperbrain/intelligence/: context_builder.py  llm_engine.py  retriever.py  tools.py
agsuperbrain/mcp/: server.py
agsuperbrain/memory/graph/: clustering.py  graph_store.py  schema.py  visualizer.py
agsuperbrain/memory/vector/: embedder.py  vector_store.py
agsuperbrain/preprocessing/: audio_fetcher.py  code_parser.py  doc_parser.py
docs/: about.md  architecture.md  cli.md  comparison.md  index.md  install.md  mcp.md  quickstart.md  requirements.txt
evaluation/: results.json  results_rq1.json  results_rq3.json  run_eval.py  run_rq1.py  run_rq3.py
scripts/: text_io_snippet.py
site/: 404.html  index.html  requirements.txt  sitemap.xml
site/about/: index.html
site/architecture/: index.html
site/cli/: index.html
site/comparison/: index.html
site/install/: index.html
site/mcp/: index.html
site/quickstart/: index.html
site/search/: search_index.json
tests/: test_smoke.py  test_text_io.py
